# libmysofa

./: CMakeLists.txt
android/: libmysofa.sln  libmysofa.vcxproj  libmysofa.vcxproj.filters
src/: CMakeLists.txt
src/hdf/: btree.c  dataobject.c
src/hrtf/: mysofa.h  reader.c  tools.c
